fix: replace requireAuth with authMiddleware and aligns the signin page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,13 +21,11 @@ a {
 a:hover {
   color: #535bf2;
 }
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
